Fixed the link text being invisible on the new page design.

--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,5 @@
     font-weight: 700;
     font-size: 1.15em;
     line-height: 19px;
-    color: #fff;
+    color: black;
 }
